chore: remove vulnerable package location-action

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -42,4 +42,4 @@ jobs:
         uses: coderrob/commit-and-push@main
         with:
           branch_target: main
-          directory_path: "."
+          directory_path: '.'
