feat: update to workflows to better filter by folder / file with copyright script formatting (#23)
* feat: update workflows and add updates to copyright formatting

* feat: add automated update of readme on action changes

* chore: remove vulnerable package location-action

* chore: update description of package

* chore: avoid shell format check - scripts will be removed soon

* chore: bump dist

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,16 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'badges/**'
+      - '*.md'
 
 defaults:
   run:
     shell: bash
 
 concurrency:
-  group: ${{ github.ref }}-${{ github.job }}
+  group: ci-${{ github.ref }}-${{ github.job }}
   cancel-in-progress: true
 
 permissions:
@@ -41,7 +44,7 @@ jobs:
 
       - name: Install Dependencies
         id: install-dependencies
-        run: npm install
+        run: npm ci
 
       - name: Style Check
         id: style-check
@@ -57,7 +60,6 @@ jobs:
         env:
           DEFAULT_BRANCH: main
           FILTER_REGEX_EXCLUDE: dist/**/*
-          FIX_SHELL_SHFMT: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LINTER_RULES_PATH: ${{ github.workspace }}
           VALIDATE_ALL_CODEBASE: true
@@ -65,6 +67,7 @@ jobs:
           VALIDATE_JAVASCRIPT_STANDARD: false
           VALIDATE_JSCPD: false
           VALIDATE_JSON: false
+          VALIDATE_SHELL_SHFMT: false
           VALIDATE_TYPESCRIPT_ES: false
           VALIDATE_TYPESCRIPT_STANDARD: false
 
